# hand-pose-tracker

./: .gitignore  CMakeLists.txt  README.md  handclass_config.h.in
apps/: .handTracker.cpp.swn  .handTracker.cpp.swo  .handTracker.cpp.swp  CMakeLists.txt  chandtracker_gui.cpp  createFeatDB.cpp  handTracker.cpp  hog_gui.cpp  nn_hogJointsParts.cpp  recompute_hog.cpp  test_hog.cpp  test_hog_db.cpp
include/: approxNNflann.h  approxNNlshkit.h  cDB.h  cDBregisterQuery.h  cPose.h  cPoseEstimator.h  cTemporalFilter.h  chandtracker.h  exactNN.h  feature.h  handclass_config.h  hog.h  processFeat.h  typeDefinitions.h
scene/: CMakeLists.txt  README  convert.cpp  hand.mesh  hand.mtl  rHandP3.mtl  taxonomy.db
src/: CMakeLists.txt  cPoselistMulti.cpp  cTemporalFilter.cpp  chandtracker.cpp
tests/: CMakeLists.txt
